fix overflowing navbar

--- a/docs/.vitepress/theme/nav.css
+++ b/docs/.vitepress/theme/nav.css
@@ -1,4 +1,4 @@
-@media (min-width: 540px) {
+@media (min-width: 640px) {
     .VPNavBarMenu {
         display: flex !important;
     }
